--- a/T13_Los40/index.html
+++ b/T13_Los40/index.html
@@ -8,80 +8,99 @@
 </head>
 <body>
 
-    <img src="/img/Logo.webp" alt="Los 40 Principales" class="logo">
+    <header>
+        <a href="https://los40.com/">
+            <img src="/img/Logo.webp" alt="Los 40 Principales" class="logo">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="#fotos">Fotos de Grupos Musicales</a></li>
+                <li><a href="#videoclips">Videoclips</a></li>
+                <li><a href="#enlaces">Correo</a></li>
+                <li><a href="#enlaces">Páginas Oficiales</a></li>
+            </ul>
+    </header>
     <!-- Sección 1: Fotos de grupos musicales -->
-    <h2>Fotos de Grupos Musicales</h2>
-    <div class="grid-container">
-        <div class="grid-item"><img src="/img/AC DC.webp" alt="AC DC"></div>
-        <div class="grid-item"><img src="/img/Guns N' Roses.webp" alt="Guns N' Roses"></div>
-        <div class="grid-item"><img src="/img/Led Zappeling.webp" alt="Led Zappeling"></div>
-        <div class="grid-item"><img src="/img/Metallica.webp" alt="Metallica"></div>
-        <div class="grid-item"><img src="/img/Nirvana.webp" alt="Nirvana"></div>
-        <div class="grid-item"><img src="/img/Pink Floyd.webp" alt="Pink Floyd"></div>
-        <div class="grid-item"><img src="/img/Queen.webp" alt="Queen"></div>
-        <div class="grid-item"><img src="/img/The Beatles.webp" alt="The Beatles"></div>
-        <div class="grid-item"><img src="/img/The Rolling Stones.webp" alt="The Rolling Stones"></div>
-    </div>
+     <section id="fotos">
+         <h2>Fotos de Grupos Musicales</h2>
+         <div class="grid-container">
+             <div class="grid-item"><img src="/img/AC DC.webp" alt="AC DC"></div>
+             <div class="grid-item"><img src="/img/Guns N' Roses.webp" alt="Guns N' Roses"></div>
+             <div class="grid-item"><img src="/img/Led Zappeling.webp" alt="Led Zappeling"></div>
+             <div class="grid-item"><img src="/img/Metallica.webp" alt="Metallica"></div>
+             <div class="grid-item"><img src="/img/Nirvana.webp" alt="Nirvana"></div>
+             <div class="grid-item"><img src="/img/Pink Floyd.webp" alt="Pink Floyd"></div>
+             <div class="grid-item"><img src="/img/Queen.webp" alt="Queen"></div>
+             <div class="grid-item"><img src="/img/The Beatles.webp" alt="The Beatles"></div>
+             <div class="grid-item"><img src="/img/The Rolling Stones.webp" alt="The Rolling Stones"></div>
+         </div>
+     </section>
 
     <!-- Sección 2: Videoclips -->
-    <h2>Videoclips</h2>
-    <div class="grid-container">
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/AC_DC.mp4" frameborder="0" allowfullscreen></iframe>
+    <section id="videoclips">
+        <h2>Videoclips</h2>
+        <div class="grid-container">
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/AC_DC.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/Guns_N _Roses.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/Led Zeppelin.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/Metallica.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/Nirvana.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/Pink Floyd.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/Queen.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/The Beatles.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="grid-item">
+                <iframe width="100%" height="auto" src="/img/The Rolling Stones.mp4" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/Guns_N _Roses.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/Led Zeppelin.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/Metallica.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/Nirvana.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/Pink Floyd.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/Queen.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/The Beatles.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="grid-item">
-            <iframe width="100%" height="auto" src="/img/The Rolling Stones.mp4" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
+    </section>
 
     <!-- Sección 3: Enlaces @ -->
-    <h2>Enlaces @</h2>
-    <div class="grid-container">
-        <div class="grid-item"><a href="mailto:acdc@gmail.com">@AC DC</a></div>
-        <div class="grid-item"><a href="mailto:gunsnroses@gmail.com">@Guns N' Roses</a></div>
-        <div class="grid-item"><a href="mailto:ledzeppelin@gmail.com">@Led Zeppelin</a></div>
-        <div class="grid-item"><a href="mailto:metallica@gmail.com">@Metallica</a></div>
-        <div class="grid-item"><a href="mailto:nirvana@gmail.com">@Nirvana</a></div>
-        <div class="grid-item"><a href="mailto:pinkfloyd@gmail.com">@Pink Floyd</a></div>
-        <div class="grid-item"><a href="mailto:queen@gmail.com">@Queen</a></div>
-        <div class="grid-item"><a href="mailto:thebeatles@gmail.com">@The Beatles</a></div>
-        <div class="grid-item"><a href="mailto:therollingstones@gmail.com">@The Rolling Stones</a></div>
-    </div>
+    <section id="correos">
+        <h2>Correos electrónicos</h2>
+        <div class="grid-container">
+            <div class="grid-item"><a href="mailto:acdc@gmail.com">@AC DC</a></div>
+            <div class="grid-item"><a href="mailto:gunsnroses@gmail.com">@Guns N' Roses</a></div>
+            <div class="grid-item"><a href="mailto:ledzeppelin@gmail.com">@Led Zeppelin</a></div>
+            <div class="grid-item"><a href="mailto:metallica@gmail.com">@Metallica</a></div>
+            <div class="grid-item"><a href="mailto:nirvana@gmail.com">@Nirvana</a></div>
+            <div class="grid-item"><a href="mailto:pinkfloyd@gmail.com">@Pink Floyd</a></div>
+            <div class="grid-item"><a href="mailto:queen@gmail.com">@Queen</a></div>
+            <div class="grid-item"><a href="mailto:thebeatles@gmail.com">@The Beatles</a></div>
+            <div class="grid-item"><a href="mailto:therollingstones@gmail.com">@The Rolling Stones</a></div>
+        </div>
+    </section>
 
     <!-- Sección 4: Enlaces a páginas oficiales -->
-    <h2>Enlaces a Páginas Oficiales</h2>
-    <div class="grid-container">
-        <div class="grid-item"><a href="https://www.acdc.com/tour/">@AC DC</a></div>
-        <div class="grid-item"><a href="https://www.gunsnroses.com/">@Guns N' Roses</a></div>
-        <div class="grid-item"><a href="mailto:ledzeppelin@gmail.com">@Led Zeppelin</a></div>
-        <div class="grid-item"><a href="mailto:metallica@gmail.com">@Metallica</a></div>
-        <div class="grid-item"><a href="mailto:nirvana@gmail.com">@Nirvana</a></div>
-        <div class="grid-item"><a href="mailto:pinkfloyd@gmail.com">@Pink Floyd</a></div>
-        <div class="grid-item"><a href="mailto:queen@gmail.com">@Queen</a></div>
-        <div class="grid-item"><a href="mailto:thebeatles@gmail.com">@The Beatles</a></div>
-        <div class="grid-item"><a href="mailto:therollingstones@gmail.com">@The Rolling Stones</a></div>
-    </div>
+    <section id="enlaces">
+        <h2>Enlaces a Páginas Oficiales</h2>
+        <div class="grid-container">
+            <div class="grid-item"><a href="https://www.acdc.com/tour/">@AC DC</a></div>
+            <div class="grid-item"><a href="https://www.gunsnroses.com/">@Guns N' Roses</a></div>
+            <div class="grid-item"><a href="https://www.ledzeppelin.com/">@Led Zeppelin</a></div>
+            <div class="grid-item"><a href="https://www.metallica.com/">@Metallica</a></div>
+            <div class="grid-item"><a href="https://www.nirvana.com/">@Nirvana</a></div>
+            <div class="grid-item"><a href="https://www.pinkfloyd.com/">@Pink Floyd</a></div>
+            <div class="grid-item"><a href="https://www.queen.com/">@Queen</a></div>
+            <div class="grid-item"><a href="https://www.thebeatles.com/">@The Beatles</a></div>
+            <div class="grid-item"><a href="https://www.therollingstones.com/">@The Rolling Stones</a></div>
+        </div>
+    </section>
 
 </body>
 </html>
