--- a/T14_Formulario/index.html
+++ b/T14_Formulario/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
-    <main>
-        <h1></h1>
+    <form>
+        <h1>Encuentra Tu Pareja Para San Valentín</h1>
         <section>
             <h2>Nombre:</h2>
             <input type="text" name="" id="">
         </section>
         <section>
             <h2>Edad</h2>
-            <input type="radio" name="" id=""> 1 - 9 años
-            <input type="radio" name="" id=""> 10 - 19 años
-            <input type="radio" name="" id=""> 20 - 29 años
-            <input type="radio" name="" id=""> 30 - 39 años
+            <input type="radio" name="edad" id=""> 1 - 9 años
+            <input type="radio" name="edad" id=""> 10 - 19 años
+            <input type="radio" name="edad" id=""> 20 - 29 años
+            <input type="radio" name="edad" id=""> 30 - 39 años
         </section>
         <section>
             <h2>Juegos Favoritos</h2>
-            <input type="checkbox" name="" id=""> Ajedrez
-            <input type="checkbox" name="" id=""> Damas
-            <input type="checkbox" name="" id=""> Dominó
-            <input type="checkbox" name="" id=""> Parchís
-            <input type="checkbox" name="" id=""> Scrabble
-            <input type="checkbox" name="" id=""> Cartas
+            <input type="checkbox" name="juego" id=""> Ajedrez
+            <input type="checkbox" name="juego" id=""> Damas
+            <input type="checkbox" name="juego" id=""> Dominó
+            <input type="checkbox" name="juego" id=""> Parchís
+            <input type="checkbox" name="juego" id=""> Scrabble
+            <input type="checkbox" name="juego" id=""> Cartas
         </section>
         <section>
             <h2>Pelicula Favorita</h2>
@@ -41,10 +42,10 @@
             </select>
         </section>
         <section>
-            <button>Abrir</button>
-            <button>Guardar</button>
-            <button>Imprimir</button>
+            <button id="abrirBtn">Abrir</button>
+            <button id="guardarBtn">Guardar</button>
+            <button id="imprimirBtn">Imprimir</button>
         </section>
-    </main>
+    </form>
 </body>
 </html>
