Agenda Fix bugs

--- a/trimestre_2/P4_Agenda/index.html
+++ b/trimestre_2/P4_Agenda/index.html
@@ -10,8 +10,7 @@
 <body>
     <section id="list">
         <header id="buscador">
-            <input type="text" id="search" placeholder="Buscar...">
-            <button type="button" onclick="search()">Buscar</button>
+            <input type="text" id="search" placeholder="Buscar..." oninput="search()">
         </header>
         <article id="contactos">
             <div id="nuevoContacto" onclick="showForm()"><img src="img/Nuevo_Contacto.png" alt="+"><span>Nuevo Contacto</span></div>
