--- a/T15_Navegadores/catalogo.html
+++ b/T15_Navegadores/catalogo.html
@@ -4,68 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Juegos - RetroGame Hub</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #1a1a1a;
-            color: #fff;
-            font-family: 'Press Start 2P', cursive;
-            text-align: center;
-        }
-        header {
-            background: #ffcc00;
-            padding: 20px;
-            font-size: 24px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #333;
-            padding: 10px;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            background: #444;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            background: #ffcc00;
-            color: #000;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        .accordion {
-            max-width: 900px;
-            margin: auto;
-        }
-        .accordion-item {
-            background: #ff5733;
-            margin: 10px 0;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        .accordion-header {
-            padding: 15px;
-            cursor: pointer;
-            text-align: left;
-            font-size: 18px;
-            background: #c70039;
-        }
-        .accordion-content {
-            display: none;
-            padding: 15px;
-            background: #ffcc00;
-            color: #000;
-        }
-    </style>
+    <link rel="stylesheet" href="css/catalogo.css">
     <script>
         function toggleAccordion(element) {
             var content = element.nextElementSibling;
