--- a/T15_Navegadores/contacto.html
+++ b/T15_Navegadores/contacto.html
@@ -4,109 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto y Redes - RetroGame Hub</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #1a1a1a;
-      color: #fff;
-      font-family: 'Press Start 2P', cursive;
-      text-align: center;
-    }
-    header {
-      background: #ffcc00;
-      padding: 20px;
-      font-size: 24px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #333;
-      padding: 10px;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 0 10px;
-      background: #444;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    nav a:hover {
-      background: #ffcc00;
-      color: #000;
-    }
-    .container {
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 0 20px;
-    }
-    .social-icons {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-bottom: 30px;
-    }
-    .social-icons a {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 50px;
-      height: 50px;
-      background: #444;
-      border-radius: 50%;
-      color: #fff;
-      font-size: 24px;
-      transition: 0.3s;
-      text-decoration: none;
-    }
-    .social-icons a:hover {
-      background: #ffcc00;
-      color: #000;
-    }
-    form {
-      background: #222;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      background: #444;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      font-family: 'Press Start 2P', cursive;
-      font-size: 12px;
-    }
-    form input:focus, form textarea:focus {
-      background: #ffcc00;
-      color: #000;
-      outline: none;
-    }
-    form button {
-      background: #444;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 20px;
-      color: #fff;
-      font-family: 'Press Start 2P', cursive;
-      font-size: 12px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    form button:hover {
-      background: #ffcc00;
-      color: #000;
-    }
-  </style>
+  <link rel="stylesheet" href="css/contacto.css">
 </head>
 <body>
   <header>🎮 RetroGame Hub 🎮</header>
