--- a/T15_Navegadores/historia.html
+++ b/T15_Navegadores/historia.html
@@ -4,83 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia de los Videojuegos - RetroGame Hub</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #1a1a1a;
-            color: #fff;
-            font-family: 'Press Start 2P', cursive;
-            text-align: center;
-        }
-        header {
-            background: #ffcc00;
-            padding: 20px;
-            font-size: 24px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #333;
-            padding: 10px;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            background: #444;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            background: #ffcc00;
-            color: #000;
-        }
-        .container {
-            margin-top: 50px;
-            max-width: 900px;
-            margin: auto;
-        }
-        .tabs {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .tabs a {
-            color: #fff;
-            background: #444;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 5px;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        .tabs a:hover {
-            background: #ffcc00;
-            color: #000;
-        }
-        .content {
-            margin-top: 20px;
-        }
-        .epoch {
-            display: none;
-        }
-        .epoch.active {
-            display: block;
-        }
-        .epoch h3 {
-            font-size: 22px;
-            margin-bottom: 10px;
-        }
-        .epoch p {
-            font-size: 16px;
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/historia.css">
 </head>
 <body>
     <header>🎮 RetroGame Hub 🎮</header>
