--- a/T15_Navegadores/index.html
+++ b/T15_Navegadores/index.html
@@ -4,65 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroGame Hub</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #1a1a1a;
-            color: #fff;
-            font-family: 'Press Start 2P', cursive;
-            text-align: center;
-        }
-        header {
-            background: #ffcc00;
-            padding: 20px;
-            font-size: 24px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #333;
-            padding: 10px;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            background: #444;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            background: #ffcc00;
-            color: #000;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        .game-links {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-        }
-        .game-links a {
-            display: block;
-            background: #ff5733;
-            padding: 15px;
-            border-radius: 10px;
-            text-decoration: none;
-            color: white;
-            transition: 0.3s;
-        }
-        .game-links a:hover {
-            background: #c70039;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>🎮 RetroGame Hub 🎮</header>
