--- a/T15_Navegadores/tienda.html
+++ b/T15_Navegadores/tienda.html
@@ -4,110 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda de Merchandising - RetroGame Hub</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #1a1a1a;
-      color: #fff;
-      font-family: 'Press Start 2P', cursive;
-    }
-    header {
-      background: #ffcc00;
-      padding: 20px;
-      font-size: 24px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #333;
-      padding: 10px;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 0 10px;
-      background: #444;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    nav a:hover {
-      background: #ffcc00;
-      color: #000;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 30px auto;
-      padding: 0 20px;
-    }
-    .search-bar {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-    .search-bar input {
-      width: 100%;
-      max-width: 400px;
-      padding: 10px;
-      background: #444;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      font-family: 'Press Start 2P', cursive;
-      font-size: 12px;
-      transition: 0.3s;
-    }
-    .search-bar input:focus {
-      background: #ffcc00;
-      color: #000;
-      outline: none;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .product {
-      background: #ff5733;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      transition: 0.3s;
-    }
-    .product:hover {
-      background: #c70039;
-    }
-    .product h3 {
-      font-size: 16px;
-      margin-bottom: 10px;
-    }
-    .product p {
-      font-size: 12px;
-      margin-bottom: 15px;
-    }
-    .product button {
-      background: #444;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 20px;
-      color: #fff;
-      cursor: pointer;
-      transition: 0.3s;
-      font-family: 'Press Start 2P', cursive;
-      font-size: 12px;
-    }
-    .product button:hover {
-      background: #ffcc00;
-      color: #000;
-    }
-  </style>
+  <link rel="stylesheet" href="css/tienda.css">
 </head>
 <body>
   <header>🎮 RetroGame Hub 🎮</header>
