--- a/T17_Libreria/index.html
+++ b/T17_Libreria/index.html
@@ -13,8 +13,36 @@
             <ul>
                 <li><a href="ES/inicio.html">Inicio <img src="assets/img/icons/home.svg"></a></li>
                 <li><a href="ES/productos.html">Productos <img src="assets/img/icons/productos.svg"></a></li>
+                <li class="lenguage-menu">
+                    Idioma <img src="assets/img/icons/traduccion.svg">
+                    <div class="lenguage-list">
+                        <a href="/ES/index.html">🇪🇸 Español</a>
+                        <a href="/EN/index.html">🇬🇧 Inglés</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h2>¡Bienvenidos a nuestra librería!</h2>
+            <p>En nuestra librería encontrarás una gran variedad de libros de diferentes géneros y autores. ¡No dudes en visitarnos!</p>
+            <img src="assets/img/libreria.jpeg" alt="Libreria">
+        </section>
+        <section>
+            <h2>¡Nuestros productos!</h2>
+            <p>En nuestra librería encontrarás una gran variedad de libros de diferentes géneros y autores. ¡No dudes en visitarnos!</p>
+            <img src="assets/img/libros/libro.jpeg" alt="Libros"><br><br>
+            <a href="ES/productos.html">Ver productos</a>
+        </section>
+        <section>
+            <h2>¿Donde estamos?</h2>
+            <p>Nos encontramos en la Calle Falsa 123, Springfield. ¡Ven a visitarnos y descubre todo lo que tenemos para ofrecerte!</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3046.2436050420097!2d-3.7710434243129622!3d40.22588556723318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd41f5320b893765%3A0xfd153cb3a00bc9bc!2sIES%20Enrique%20Tierno%20Galv%C3%A1n!5e0!3m2!1ses!2ses!4v1741364795872!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
+    <footer>
+        <p> &copy; 2025 Lectores de Jesús </p>
+    </footer>
 </body>
 </html>
