--- a/T17_Libreria/ES/productos.html
+++ b/T17_Libreria/ES/productos.html
@@ -27,96 +27,96 @@
         <h1>Productos</h1>
         <section class="productos">
             <!-- Libros -->
-            <div class="producto">
+            <div class="producto Libros">
                 <img src="/assets/img/productos/Libro1.jpg" alt="Libro 1">
                 <h3>Matilda</h3>
                 <div class="descripcion">
-                    <p>Descripción del libro 1</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Un libro fascinante sobre la historia de una niña con poderes extraordinarios.</p>
+                    <p>Precio: 4,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
-            <div class="producto">
+            <div class="producto Libros">
                 <img src="/assets/img/productos/Libro2.jpg" alt="Libro 1">
                 <h3>El Principito</h3>
                 <div class="descripcion">
-                    <p>Descripción del libro 2</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Un clásico de la literatura infantil que narra la historia de un pequeño príncipe que viaja por el universo.</p>
+                    <p>Precio: 7,00€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
-            <div class="producto">
+            <div class="producto Libros">
                 <img src="/assets/img/productos/Libro3.jpg" alt="Libro 1">
                 <h3>El Cuerpo Humano</h3>
                 <div class="descripcion">
-                    <p>Descripción del libro 3</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Un libro educativo que explora el funcionamiento del cuerpo humano de manera detallada y accesible.</p>
+                    <p>Precio: 1,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
             <!-- Audiolibros -->
-            <div class="producto">
+            <div class="producto  Audiolibros">
                 <audio controls>
                     <source src="/assets/img/productos/Audiolibro1.mp3" type="audio/mpeg">
                     Tu navegador no soporta el elemento de audio.
                 </audio>
                 <h3>Erase una vez</h3>
                 <div class="descripcion">
-                    <p>Descripción del audiolibro 1</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Un audiolibro que narra cuentos clásicos para niños.</p>
+                    <p>Precio: 3,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
-            <div class="producto">
+            <div class="producto Audiolibros">
                 <audio controls>
                     <source src="/assets/img/productos/Audiolibro2.mp3" type="audio/mpeg">
                     Tu navegador no soporta el elemento de audio.
                 </audio>                
                 <h3>Bob Esponja</h3>
                 <div class="descripcion">
-                    <p>Descripción del audiolibro 2</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Un audiolibro divertido con las aventuras de Bob Esponja y sus amigos.</p>
+                    <p>Precio: 2,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
-            <div class="producto">
+            <div class="producto Audiolibros">
                 <audio controls>
                     <source src="/assets/img/productos/Audiolibro3.mp3" type="audio/mpeg">
                     Tu navegador no soporta el elemento de audio.
                 </audio>                
                 <h3>El asombroso mundo de Gumbal</h3>
                 <div class="descripcion">
-                    <p>Descripción del audiolibro 3</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Un audiolibro emocionante con las aventuras de Gumball y sus amigos.</p>
+                    <p>Precio: 7,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
             <!-- Peliculas -->
-            <div class="producto">
+            <div class="producto Peliculas">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/5Df5vHD3LvE?si=rW7U3EyHgu-AnPdp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h3>Los Rabbits</h3>
                 <div class="descripcion">
-                    <p>Descripción del pelicula 1</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Una película divertida sobre las aventuras de los Rabbits.</p>
+                    <p>Precio: 4,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
-            <div class="producto">
+            <div class="producto Peliculas">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/NoSmJspvq0U?si=9us-oe9CY80qgchp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
                 <h3>Doraemon</h3>
                 <div class="descripcion">
-                    <p>Descripción del pelicula 2</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Una película emocionante sobre las aventuras de Doraemon y sus amigos.</p>
+                    <p>Precio: 19,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
-            <div class="producto">
+            <div class="producto Peliculas">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/_HmasaSBzYM?si=SftEpmw8eH4iE0tc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h3>Hora de Aventuras</h3>
                 <div class="descripcion">
-                    <p>Descripción del pelicula 3</p>
-                    <p>Precio: 10€</p>
-                    <button>Comprar</button>
+                    <p>Una película llena de aventuras y diversión con Finn y Jake.</p>
+                    <p>Precio: 7,99€</p>
+                    <button onclick="anadirCarrito()">Comprar</button>
                 </div>
             </div>
         </section>
@@ -124,17 +124,21 @@
         <aside>
             <div>
                 <h2>Todos nuestros productos</h2>
-                <input type="text" id="mySearch" placeholder="Buscar...">
-                <button onclick="myFunction()">Buscar</button>
+                <input type="text" id="mySearch" placeholder="Buscar..." oninput="buscar()">
+                <select name="filtro" id="filtro" onchange="filtrar()">
+                    <option value="none">Filtrar...</option>
+                    <option value="Libros"> Libros </option>
+                    <option value="Audiolibros"> Audiolibros </option>
+                    <option value="Peliculas"> Peliculas </option>
+                </select>
             </div>
         </aside>
     </main>
     <footer>
         <p>&copy; 2025 Lectores de Jesús</p>
     </footer>
-
     <script>
-        function myFunction() {
+        function buscar() {
             var input, filter, ul, li, a, i, txtValue;
             input = document.getElementById("mySearch");
             filter = input.value.toUpperCase();
@@ -150,6 +154,26 @@
                 }
             }
         }
+        
+        function filtrar() {
+            var select, filter, ul, li, i;
+            select = document.getElementById("filtro");
+            filter = select.value;
+            ul = document.getElementsByClassName("productos")[0];
+            li = ul.getElementsByClassName("producto");
+            for (i = 0; i < li.length; i++) {
+                if (filter === "none" || li[i].classList.contains(filter)) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
+        }
+
+        function anadirCarrito() {
+            alert("Producto añadido al carrito");
+        }
+
     </script>
 </body>
 </html>
