--- a/T17_Libreria/ES/index.html
+++ b/T17_Libreria/ES/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Lectores de Jesús</h1>
+        <img src="/assets/img/logo.png" alt="La Casa Del Libro" class="logo">
         <nav>
             <ul>
                 <li><a href="/ES/index.html">Inicio <img src="/assets/img/icons/home.svg"></a></li>
@@ -20,6 +20,7 @@
                         <a href="/EN/index.html">🇬🇧 Inglés</a>
                     </div>
                 </li>
+                <li onclick="mostrarCarro()">Cesta<img src="/assets/img/icons/shop.svg"></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +43,7 @@
         </section>
     </main>
     <footer>
-        <p> &copy; 2025 Lectores de Jesús </p>
+        <p> &copy; 2025 La Casa Del Libro </p>
     </footer>
 </body>
 </html>
