--- a/T17_Libreria/index.html
+++ b/T17_Libreria/index.html
@@ -46,12 +46,12 @@
     <dialog id="carrito" show="true">
         <h1>Carrito de la compra</h1>
         <ul id="carrito-lista">
-            <li id="carrito-producto">
-                <img src="" alt="" id="imagen">
+            <li class="carrito-producto">
+                <img src="/assets/img/libreria.jpeg" alt="" id="imagen">
                 <div>
-                    <h2 id="nombre"> </h2>
-                    <p id="precio"> </p>
-                    <p id="cantidad"> </p>
+                    <h2 id="nombre">Test </h2>
+                    <p id="precio">10€ </p>
+                    <p id="cantidad">12u </p>
                     <button><img src="/assets/img/icons/anadir.svg"></button>
                     <button><img src="/assets/img/icons/quitar.svg"></button>
                     <button><img src="/assets/img/icons/eliminar.svg"></button>
